[package]
name = "tree-sitter-visitor"
authors = ["Tibor Djurica Potpara <tibor.djurica@ojdip.net>"]
description = "A short description of my package"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
tree-sitter = "~0.20.0"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
